--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <main class="container">
-    <img src="/images/image-qr-code.png" alt="QR code">
+    <img src="images/image-qr-code.png" alt="QR code">
     <h2>Improve your front-end skills by building projects</h2>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
